<resources>
    <string name="app_name">DDM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_buscar">Buscar</string>
    <string name="next">Logar</string>
    <string name="Bem_vindo">Bem-vindo ao Dog\'s Center.</string>
    <string name="login">Faça seu login Arg: %1$s</string>
    <string name="Usuário">Usuário</string>
    <string name="Senha">Senha</string>
    <string name="Home">Home</string>
    <string name="menu_loja">Loja</string>
    <string name="menu_Perfil">Meu Perfil</string>
    <string name="menu_config">Minhas configurações</string>
    <string name="cardNome">Pet</string>
    <string name="menu_home">Home</string>

</resources>