<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_loja_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_perfil_black_foreground"
            android:title="@string/menu_Perfil" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_configuracoes_black"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@color/black"
            android:onClick="QuitApp"
            android:title="Sair" />
    </group>
</menu>