<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_buscar"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_buscar"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:id="@+id/action_atualizar"
        android:title="@string/action_atualizar"
        app:showAsAction="always" />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="visible"
        style="?android:attr/progressBarStyle" />


</menu>