<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <EditText
        android:id="@+id/campo_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="-1dp"
        android:layout_y="487dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Digite sua senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="115dp"
        android:layout_y="102dp"
        android:text="@string/Bem_vindo"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

    <EditText
        android:id="@+id/campo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="409dp"
        android:autofillHints="Olá"
        android:ems="10"
        android:hint="Escreva seu usuário"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/campo_senha"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.262"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="461dp"
        android:text="@string/Senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_x="2dp"
        android:layout_y="385dp"
        android:text="@string/Usuário"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textview_first"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="157dp"
        android:layout_y="551dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_x="107dp"
        android:layout_y="154dp"
        android:contentDescription="TODO"
        android:src="@drawable/cachorro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_catalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="31dp"
        android:layout_y="42dp"
        android:text="Catálogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <Button
        android:id="@+id/button_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="249dp"
        android:layout_y="43dp"
        android:text="Clientes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_catalogo"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <Button
        android:id="@+id/button_agenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="150dp"
        android:layout_y="42dp"
        android:text="Agenda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_clientes"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />
</androidx.constraintlayout.widget.ConstraintLayout>